[gd_scene load_steps=2 format=3 uid="uid://bxm8k7n2qp4r8"]

[ext_resource type="Script" path="res://scripts/ui/loading_screen.gd" id="1_0"]

[node name="LoadingScreen" type="CanvasLayer"]
script = ExtResource("1_0")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "NIGHTMARE LOOP"
horizontal_alignment = 1

[node name="LoadingText" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Carregando..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 20)
max_value = 100.0
value = 0.0

[node name="StatusText" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Inicializando sistemas..."
horizontal_alignment = 1

[node name="LoadingTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true 